# bedrock-swarm

./: .cursorrules.tpl  .flake8  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  404.html  CODE_OF_CONDUCT.md  LICENSE  README.md  coverage.xml  index.html  mkdocs.yml  objects.inv  pyproject.toml  pytest.ini  requirements-test.txt
.github/workflows/: pr-checks.yml  release.yml  tests.yml
api/agents/: index.html
api/memory/: index.html
api/tools/: index.html
docs/: code_of_conduct.md  contributing.md  index.md  requirements.txt
docs/api/: agency.md  agents.md  events.md  index.md  memory.md  tools.md
docs/api/agency/: agents.md  events.md  index.md  memory.md  run.md  thread.md
docs/api/agents/: base.md
docs/api/models/: base.md  claude.md  factory.md  index.md  titan.md
docs/api/tools/: base.md  calculator.md  index.md  send_message.md  time.md  validation.md
docs/concepts/: agency.md  agents.md  architecture.md  communication.md  config.md  coordinator.md  events.md  logging.md  memory.md  models.md  specialists.md  threads.md  tools.md  types.md
docs/development/: contributing.md  index.md  organization.md  testing.md  tools.md
docs/examples/: README.md  advanced.md  basic.md  calculator.md  index.md  multi-agent.md  time.md
docs/getting-started/: configuration.md  installation.md  quickstart.md
docs/user-guide/: advanced.md  agents.md  core-concepts.md  logging.md  memory.md  tools.md
examples/: README.md  agency_example.py  memory_example.py  simple_analysis.py  simple_time.py  time_example.py  tool_example.py  trace_example.py
getting-started/installation/: index.html
getting-started/quickstart/: index.html
search/: search_index.json
src/bedrock_swarm/: __init__.py  _version.py  events.py  exceptions.py  logging.py  types.py
src/bedrock_swarm/agency/: __init__.py  agency.py  thread.py  workflow.py
src/bedrock_swarm/agents/: __init__.py  base.py  claude.py
src/bedrock_swarm/config/: __init__.py
src/bedrock_swarm/memory/: __init__.py  base.py
src/bedrock_swarm/models/: __init__.py  base.py  claude.py  factory.py  titan.py
src/bedrock_swarm/swarm/: base.py
src/bedrock_swarm/tools/: __init__.py  base.py  calculator.py  factory.py  planning.py  send_message.py  time.py  validation.py  web.py
tests/: README.md  conftest.py  test_agent.py
tests/integration/: test_agency.py  test_models.py  test_time_tool.py  test_web_tool.py
tests/unit/: conftest.py  test_agency.py  test_agent.py  test_calculator.py  test_events.py  test_memory.py  test_model_claude.py  test_model_titan.py  test_planning.py  test_send_message.py  test_swarm.py  test_thread.py  test_time_tool.py  test_tools.py  test_tools_factory.py  test_validation.py  test_workflow.py
user-guide/core-concepts/: index.html
