[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "bedrock-swarm"
description = "A framework for building multi-agent systems using AWS Bedrock"
readme = "README.md"
requires-python = ">=3.9"
license = {file = "LICENSE"}
dynamic = ["version"]
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "boto3>=1.28.0",
    "pydantic>=2.0.0",
    "rich>=13.0.0",
    "typing-extensions>=4.7.0",
    "python-dotenv>=1.0.0",
    "jsonschema>=4.17.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
    "flake8>=6.0.0",
    "pre-commit>=3.0.0"
]
docs = [
    "mkdocs>=1.4.0",
    "mkdocs-material>=9.0.0",
    "mkdocstrings>=0.22.0",
    "mkdocstrings-python>=1.1.0",
    "mkdocs-mermaid2-plugin>=1.1.0"
]

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["bedrock_swarm"]

[tool.setuptools.package-data]
bedrock_swarm = ["py.typed"]

[tool.setuptools_scm]
write_to = "src/bedrock_swarm/_version.py"
version_scheme = "post-release"
local_scheme = "no-local-version"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --cov=bedrock_swarm --cov-report=term-missing --cov-report=html --cov-fail-under=85"
testpaths = ["tests/unit"]
python_files = ["test_*.py"]

[tool.black]
line-length = 88
target-version = ['py37']
include = '\.pyi?$'
skip-string-normalization = false

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
exclude = ["tests/.*"]

[tool.coverage.run]
source = ["bedrock_swarm"]
omit = [
    "tests/*",
    "**/__init__.py",
    "**/py.typed",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "pass",
    "raise ImportError",
]
